CE-45 pniov2 -> ForkJoinPool