@@ -126,4 +126,48 @@
         <oap.deps.apache.velocity.version>2.3</oap.deps.apache.velocity.version>
         <oap.deps.sendgrid.version>4.9.3</oap.deps.sendgrid.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${oap.deps.maven.surefire.version}</version>
+                <configuration>
+                    <argLine>
+                        -ea
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.math=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.stream=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.text=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.sql/java.sql=ALL-UNNAMED
+                    </argLine>
+                    <forkCount>${oap.deps.maven.surefire.forkCount}</forkCount>
+                    <!-- Activate the use of TCP to transmit events to the plugin -->
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+                    <reuseForks>true</reuseForks>
+                    <trimStackTrace>false</trimStackTrace>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <useFile>true</useFile>
+                    <disableXmlReport>false</disableXmlReport>
+                    <printSummary>false</printSummary>
+                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <runOrder>balanced</runOrder>
+                    <includes>
+                        <include>**/*Test.*</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*Performance.*</exclude>
+                        <exclude>**/*Perf.*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
